# trabalho_po_1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
data/: alunos.txt  numeros_aleatorios_10000.txt  numeros_aleatorios_500.txt  numeros_aleatorios_5000.txt  numeros_aleatorios_50000.txt  numeros_crescentes_10000.txt  numeros_crescentes_500.txt  numeros_crescentes_5000.txt  numeros_crescentes_50000.txt  numeros_decrescentes_10000.txt  numeros_decrescentes_500.txt  numeros_decrescentes_5000.txt  numeros_decrescentes_50000.txt  numeros_duplicados.txt  numeros_grande.txt  numeros_medio.txt  numeros_pequeno.txt  registros_pessoas_1000.txt
include/: algoritmos.h  analise.h  io.h  sorts.h  tipos.h  utils.h
output/: analise_estabilidade.txt
output/alunos/: Heap_Sort_alunos_alunos.txt  Insertion_Sort_nao_otimizada_alunos.txt
output/numeros/: Bubble_Sort_nao_otimizada_numeros_crescentes_10000.txt  Bubble_Sort_otimizada_numeros_pequeno.txt  Heap_Sort_numeros_numeros_grande.txt  Heap_Sort_numeros_numeros_medio.txt  Insertion_Sort_nao_otimizada_numeros_crescentes_500.txt  Quick_Sort_otimizada_numeros_aleatorios_5000.txt  Shaker_Sort_nao_otimizada_numeros_aleatorios_50000.txt  Shaker_Sort_nao_otimizada_numeros_decrescentes_10000.txt  Shaker_Sort_nao_otimizada_numeros_decrescentes_500.txt  Shaker_Sort_nao_otimizada_numeros_decrescentes_5000.txt  Shaker_Sort_nao_otimizada_numeros_decrescentes_50000.txt  Shaker_Sort_nao_otimizada_numeros_grande.txt  Shaker_Sort_nao_otimizada_numeros_reversos.txt  (+3 more)
src/: algoritmos.c  analise.c  io.c  utils.c
(+45 files in other folders)
